package stest.tron.wallet.dailybuild.exceptionfee;

import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;
import lombok.extern.slf4j.Slf4j;
import org.junit.Assert;
import org.testng.annotations.AfterClass;
import org.testng.annotations.BeforeClass;
import org.testng.annotations.BeforeSuite;
import org.testng.annotations.Test;
import io.midasprotocol.api.GrpcAPI.AccountResourceMessage;
import io.midasprotocol.api.WalletGrpc;
import io.midasprotocol.api.WalletSolidityGrpc;
import io.midasprotocol.common.crypto.ECKey;
import io.midasprotocol.common.utils.ByteArray;
import io.midasprotocol.common.utils.Utils;
import io.midasprotocol.core.Wallet;
import io.midasprotocol.protos.Protocol.Account;
import io.midasprotocol.protos.Protocol.TransactionInfo;
import stest.tron.wallet.common.client.Configuration;
import stest.tron.wallet.common.client.utils.Base58;
import stest.tron.wallet.common.client.utils.PublicMethed;

import java.util.Optional;
import java.util.concurrent.TimeUnit;

@Slf4j
public class AssertException {

	private final String testNetAccountKey = Configuration.getByPath("testng.conf")
			.getString("foundationAccount.key2");
	private final byte[] testNetAccountAddress = PublicMethed.getFinalAddress(testNetAccountKey);
	byte[] contractAddress = null;
	ECKey ecKey1 = new ECKey(Utils.getRandom());
	byte[] contractExcAddress = ecKey1.getAddress();
	String contractExcKey = ByteArray.toHexString(ecKey1.getPrivKeyBytes());
	private Long maxFeeLimit = Configuration.getByPath("testng.conf")
			.getLong("defaultParameter.maxFeeLimit");
	private ManagedChannel channelSolidity = null;
	private ManagedChannel channelFull = null;
	private WalletGrpc.WalletBlockingStub blockingStubFull = null;
	private ManagedChannel channelFull1 = null;
	private WalletGrpc.WalletBlockingStub blockingStubFull1 = null;
	private WalletSolidityGrpc.WalletSolidityBlockingStub blockingStubSolidity = null;
	private String fullnode = Configuration.getByPath("testng.conf")
			.getStringList("fullnode.ip.list").get(0);
	private String fullnode1 = Configuration.getByPath("testng.conf")
			.getStringList("fullnode.ip.list").get(1);
	private String soliditynode = Configuration.getByPath("testng.conf")
			.getStringList("solidityNode.ip.list").get(0);

	@BeforeSuite
	public void beforeSuite() {
		Wallet wallet = new Wallet();
	}

	/**
	 * constructor.
	 */

	@BeforeClass(enabled = true)
	public void beforeClass() {
		PublicMethed.printAddress(contractExcKey);
		channelFull = ManagedChannelBuilder.forTarget(fullnode)
				.usePlaintext(true)
				.build();
		blockingStubFull = WalletGrpc.newBlockingStub(channelFull);
		channelFull1 = ManagedChannelBuilder.forTarget(fullnode1)
				.usePlaintext(true)
				.build();
		blockingStubFull1 = WalletGrpc.newBlockingStub(channelFull1);

		channelSolidity = ManagedChannelBuilder.forTarget(soliditynode)
				.usePlaintext(true)
				.build();
		blockingStubSolidity = WalletSolidityGrpc.newBlockingStub(channelSolidity);
	}

	@Test(enabled = true, description = "Trigger contract Divide 0")
	public void test1DivideInt() {
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Assert.assertTrue(PublicMethed
				.sendcoin(contractExcAddress, 100000000000L, testNetAccountAddress, testNetAccountKey,
						blockingStubFull));
		PublicMethed.waitProduceNextBlock(blockingStubFull);

		String contractName = "divideInt";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_AssertException_testdivideInt");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_AssertException_testdivideInt");

		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				0L, 100, null, contractExcKey,
				contractExcAddress, blockingStubFull);
		Account info;
		PublicMethed.waitProduceNextBlock(blockingStubFull);

		AccountResourceMessage resourceInfo = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		info = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		Long beforeBalance = info.getBalance();
		Long beforeEnergyUsed = resourceInfo.getEnergyUsed();
		Long beforeNetUsed = resourceInfo.getNetUsed();
		Long beforeFreeNetUsed = resourceInfo.getFreeNetUsed();
		logger.info("beforeBalance:" + beforeBalance);
		logger.info("beforeEnergyUsed:" + beforeEnergyUsed);
		logger.info("beforeNetUsed:" + beforeNetUsed);
		logger.info("beforeFreeNetUsed:" + beforeFreeNetUsed);
		String txid = "";
		String num = "4" + "," + "0";

		txid = PublicMethed.triggerContract(contractAddress,
				"divideIHaveArgsReturn(int256,int256)", num, false,
				0, maxFeeLimit, contractExcAddress, contractExcKey, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull1);
		Optional<TransactionInfo> infoById = null;
		infoById = PublicMethed.getTransactionInfoById(txid, blockingStubFull);
		Long fee = infoById.get().getFee();
		Long netUsed = infoById.get().getReceipt().getNetUsage();
		Long energyUsed = infoById.get().getReceipt().getEnergyUsage();
		Long netFee = infoById.get().getReceipt().getNetFee();

		logger.info("fee:" + fee);
		logger.info("netUsed:" + netUsed);
		logger.info("energyUsed:" + energyUsed);
		logger.info("netFee:" + netFee);

		Account infoafter = PublicMethed.queryAccount(contractExcKey, blockingStubFull1);
		AccountResourceMessage resourceInfoafter = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull1);
		Long afterBalance = infoafter.getBalance();
		Long afterEnergyUsed = resourceInfoafter.getEnergyUsed();
		Long afterNetUsed = resourceInfoafter.getNetUsed();
		Long afterFreeNetUsed = resourceInfoafter.getFreeNetUsed();
		logger.info("afterBalance:" + afterBalance);
		logger.info("afterEnergyUsed:" + afterEnergyUsed);
		logger.info("afterNetUsed:" + afterNetUsed);
		logger.info("afterFreeNetUsed:" + afterFreeNetUsed);
		Assert.assertTrue(infoById.get().getResultValue() == 1);
		Assert.assertTrue(afterBalance + maxFeeLimit + netFee == beforeBalance);
		Assert.assertTrue(beforeEnergyUsed + energyUsed >= afterEnergyUsed);
		Assert.assertTrue(beforeFreeNetUsed + netUsed >= afterFreeNetUsed);
		Assert.assertTrue(beforeNetUsed + netUsed >= afterNetUsed);
	}

	@Test(enabled = true, description = "Trigger contract index out of bounds")
	public void test2FindArgsContractMinTest() {
		String contractName = "findArgsContractTest";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_AssertException_testfindArgsContractMinTest");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_AssertException_testfindArgsContractMinTest");
		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				0L, 100, null, contractExcKey,
				contractExcAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		logger.info("11ï¼š" + Base58.encodeBase58(contractAddress));
		Account info;
		AccountResourceMessage resourceInfo = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		info = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		Long beforeBalance = info.getBalance();
		Long beforeEnergyUsed = resourceInfo.getEnergyUsed();
		Long beforeNetUsed = resourceInfo.getNetUsed();
		Long beforeFreeNetUsed = resourceInfo.getFreeNetUsed();
		logger.info("beforeBalance:" + beforeBalance);
		logger.info("beforeEnergyUsed:" + beforeEnergyUsed);
		logger.info("beforeNetUsed:" + beforeNetUsed);
		logger.info("beforeFreeNetUsed:" + beforeFreeNetUsed);
		String txid = "";
		Integer triggerNum = -1;
		txid = PublicMethed.triggerContract(contractAddress,
				"findArgsByIndexTest(uint256)", triggerNum.toString(), false,
				0, maxFeeLimit, contractExcAddress, contractExcKey, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull1);
		Optional<TransactionInfo> infoById = null;
		infoById = PublicMethed.getTransactionInfoById(txid, blockingStubFull);
		Long fee = infoById.get().getFee();
		Long netUsed = infoById.get().getReceipt().getNetUsage();
		Long energyUsed = infoById.get().getReceipt().getEnergyUsage();
		Long netFee = infoById.get().getReceipt().getNetFee();

		logger.info("fee:" + fee);
		logger.info("netUsed:" + netUsed);
		logger.info("energyUsed:" + energyUsed);
		logger.info("netFee:" + netFee);

		Account infoafter = PublicMethed.queryAccount(contractExcKey, blockingStubFull1);
		AccountResourceMessage resourceInfoafter = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull1);
		Long afterBalance = infoafter.getBalance();
		Long afterEnergyUsed = resourceInfoafter.getEnergyUsed();
		Long afterNetUsed = resourceInfoafter.getNetUsed();
		Long afterFreeNetUsed = resourceInfoafter.getFreeNetUsed();
		logger.info("afterBalance:" + afterBalance);
		logger.info("afterEnergyUsed:" + afterEnergyUsed);
		logger.info("afterNetUsed:" + afterNetUsed);
		logger.info("afterFreeNetUsed:" + afterFreeNetUsed);
		Assert.assertTrue(infoById.get().getResultValue() == 1);
		Assert.assertTrue(afterBalance + maxFeeLimit + netFee == beforeBalance);
		Assert.assertTrue(beforeEnergyUsed + energyUsed >= afterEnergyUsed);
		Assert.assertTrue(beforeFreeNetUsed + netUsed >= afterFreeNetUsed);
		Assert.assertTrue(beforeNetUsed + netUsed >= afterNetUsed);

	}

	@Test(enabled = true, description = "Trigger contract Bytes array index out of bounds")
	public void test3ByteMinContract() {
		String contractName = "byteContract";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_AssertException_testbyteMinContract");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_AssertException_testbyteMinContract");
		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				0L, 100, null, contractExcKey,
				contractExcAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Account info;
		AccountResourceMessage resourceInfo = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		info = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		Long beforeBalance = info.getBalance();
		Long beforeEnergyUsed = resourceInfo.getEnergyUsed();
		Long beforeNetUsed = resourceInfo.getNetUsed();
		Long beforeFreeNetUsed = resourceInfo.getFreeNetUsed();
		logger.info("beforeBalance:" + beforeBalance);
		logger.info("beforeEnergyUsed:" + beforeEnergyUsed);
		logger.info("beforeNetUsed:" + beforeNetUsed);
		logger.info("beforeFreeNetUsed:" + beforeFreeNetUsed);
		String txid = "";
		Integer triggerNum = -1;
		txid = PublicMethed.triggerContract(contractAddress,
				"testBytesGet(uint256)", triggerNum.toString(), false,
				0, maxFeeLimit, contractExcAddress, contractExcKey, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull1);
		Optional<TransactionInfo> infoById = null;
		infoById = PublicMethed.getTransactionInfoById(txid, blockingStubFull);
		Long fee = infoById.get().getFee();
		Long netUsed = infoById.get().getReceipt().getNetUsage();
		Long energyUsed = infoById.get().getReceipt().getEnergyUsage();
		Long netFee = infoById.get().getReceipt().getNetFee();

		logger.info("fee:" + fee);
		logger.info("netUsed:" + netUsed);
		logger.info("energyUsed:" + energyUsed);
		logger.info("netFee:" + netFee);

		Account infoafter = PublicMethed.queryAccount(contractExcKey, blockingStubFull1);
		AccountResourceMessage resourceInfoafter = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull1);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Long afterBalance = infoafter.getBalance();
		Long afterEnergyUsed = resourceInfoafter.getEnergyUsed();
		Long afterNetUsed = resourceInfoafter.getNetUsed();
		Long afterFreeNetUsed = resourceInfoafter.getFreeNetUsed();
		logger.info("afterBalance:" + afterBalance);
		logger.info("afterEnergyUsed:" + afterEnergyUsed);
		logger.info("afterNetUsed:" + afterNetUsed);
		logger.info("afterFreeNetUsed:" + afterFreeNetUsed);
		Assert.assertTrue(infoById.get().getResultValue() == 1);
		Assert.assertTrue(afterBalance + maxFeeLimit + netFee == beforeBalance);
		Assert.assertTrue(beforeEnergyUsed + energyUsed >= afterEnergyUsed);
		Assert.assertTrue(beforeFreeNetUsed + netUsed >= afterFreeNetUsed);
		Assert.assertTrue(beforeNetUsed + netUsed >= afterNetUsed);

	}

	@Test(enabled = true, description = "Trigger contract convert too large value to enumerated type")
	public void test4Enum() {
		String contractName = "enum";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_AssertException_testenum");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_AssertException_testenum");
		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				0L, 100, null, contractExcKey,
				contractExcAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Account info;
		AccountResourceMessage resourceInfo = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		info = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		Long beforeBalance = info.getBalance();
		Long beforeEnergyUsed = resourceInfo.getEnergyUsed();
		Long beforeNetUsed = resourceInfo.getNetUsed();
		Long beforeFreeNetUsed = resourceInfo.getFreeNetUsed();
		logger.info("beforeBalance:" + beforeBalance);
		logger.info("beforeEnergyUsed:" + beforeEnergyUsed);
		logger.info("beforeNetUsed:" + beforeNetUsed);
		logger.info("beforeFreeNetUsed:" + beforeFreeNetUsed);
		String txid = "";
		Integer triggerNum = 22;

		txid = PublicMethed.triggerContract(contractAddress,
				"setGoStraight(uint8)", triggerNum.toString(), false,
				0, maxFeeLimit, contractExcAddress, contractExcKey, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull1);
		Optional<TransactionInfo> infoById = null;

		infoById = PublicMethed.getTransactionInfoById(txid, blockingStubFull);
		Long fee = infoById.get().getFee();
		Long netUsed = infoById.get().getReceipt().getNetUsage();
		Long energyUsed = infoById.get().getReceipt().getEnergyUsage();
		Long netFee = infoById.get().getReceipt().getNetFee();

		logger.info("fee:" + fee);
		logger.info("netUsed:" + netUsed);
		logger.info("energyUsed:" + energyUsed);
		logger.info("netFee:" + netFee);

		Account infoafter = PublicMethed.queryAccount(contractExcKey, blockingStubFull1);
		AccountResourceMessage resourceInfoafter = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull1);
		Long afterBalance = infoafter.getBalance();
		Long afterEnergyUsed = resourceInfoafter.getEnergyUsed();
		Long afterNetUsed = resourceInfoafter.getNetUsed();
		Long afterFreeNetUsed = resourceInfoafter.getFreeNetUsed();
		logger.info("afterBalance:" + afterBalance);
		logger.info("afterEnergyUsed:" + afterEnergyUsed);
		logger.info("afterNetUsed:" + afterNetUsed);
		logger.info("afterFreeNetUsed:" + afterFreeNetUsed);

		Assert.assertTrue(infoById.get().getResultValue() == 1);
		Assert.assertTrue(afterBalance + maxFeeLimit + netFee == beforeBalance);
		Assert.assertTrue(beforeEnergyUsed + energyUsed >= afterEnergyUsed);
		Assert.assertTrue(beforeFreeNetUsed + netUsed >= afterFreeNetUsed);
		Assert.assertTrue(beforeNetUsed + netUsed >= afterNetUsed);
	}

	@Test(enabled = true, description = "Trigger contract move a negative value to a binary")
	public void test5MoveRight() {
		String contractName = "moveRight";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_AssertException_testmoveRight");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_AssertException_testmoveRight");
		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				0L, 100, null, contractExcKey,
				contractExcAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull1);

		Account info;

		AccountResourceMessage resourceInfo = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		info = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		Long beforeBalance = info.getBalance();
		Long beforeEnergyUsed = resourceInfo.getEnergyUsed();
		Long beforeNetUsed = resourceInfo.getNetUsed();
		Long beforeFreeNetUsed = resourceInfo.getFreeNetUsed();
		logger.info("beforeBalance:" + beforeBalance);
		logger.info("beforeEnergyUsed:" + beforeEnergyUsed);
		logger.info("beforeNetUsed:" + beforeNetUsed);
		logger.info("beforeFreeNetUsed:" + beforeFreeNetUsed);
		String txid = "";
		Integer triggerNum = -1;
		txid = PublicMethed.triggerContract(contractAddress,
				"binaryMoveR(int256)", triggerNum.toString(), false,
				0, maxFeeLimit, contractExcAddress, contractExcKey, blockingStubFull);
		Optional<TransactionInfo> infoById = null;
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull1);
		infoById = PublicMethed.getTransactionInfoById(txid, blockingStubFull);
		Long fee = infoById.get().getFee();
		Long netUsed = infoById.get().getReceipt().getNetUsage();
		Long energyUsed = infoById.get().getReceipt().getEnergyUsage();
		Long netFee = infoById.get().getReceipt().getNetFee();

		logger.info("fee:" + fee);
		logger.info("netUsed:" + netUsed);
		logger.info("energyUsed:" + energyUsed);
		logger.info("netFee:" + netFee);

		Account infoafter = PublicMethed.queryAccount(contractExcKey, blockingStubFull1);
		AccountResourceMessage resourceInfoafter = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull1);
		Long afterBalance = infoafter.getBalance();
		Long afterEnergyUsed = resourceInfoafter.getEnergyUsed();
		Long afterNetUsed = resourceInfoafter.getNetUsed();
		Long afterFreeNetUsed = resourceInfoafter.getFreeNetUsed();
		logger.info("afterBalance:" + afterBalance);
		logger.info("afterEnergyUsed:" + afterEnergyUsed);
		logger.info("afterNetUsed:" + afterNetUsed);
		logger.info("afterFreeNetUsed:" + afterFreeNetUsed);

		Assert.assertTrue(infoById.get().getResultValue() == 1);
		Assert.assertTrue(afterBalance + maxFeeLimit + netFee == beforeBalance);
		Assert.assertTrue(beforeEnergyUsed + energyUsed >= afterEnergyUsed);
		Assert.assertTrue(beforeFreeNetUsed + netUsed >= afterFreeNetUsed);
		Assert.assertTrue(beforeNetUsed + netUsed >= afterNetUsed);
	}

	@Test(enabled = true, description = "Trigger contract Call an uninitialized "
			+ "internal function type variable")
	public void test6UninitializedContract() {
		String contractName = "uninitializedContract";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_AssertException_testuninitializedContract");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_AssertException_testuninitializedContract");
		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				0L, 100, null, contractExcKey,
				contractExcAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Account info;

		AccountResourceMessage resourceInfo = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		info = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		Long beforeBalance = info.getBalance();
		Long beforeEnergyUsed = resourceInfo.getEnergyUsed();
		Long beforeNetUsed = resourceInfo.getNetUsed();
		Long beforeFreeNetUsed = resourceInfo.getFreeNetUsed();
		logger.info("beforeBalance:" + beforeBalance);
		logger.info("beforeEnergyUsed:" + beforeEnergyUsed);
		logger.info("beforeNetUsed:" + beforeNetUsed);
		logger.info("beforeFreeNetUsed:" + beforeFreeNetUsed);
		String txid = "";

		txid = PublicMethed.triggerContract(contractAddress,
				"test2()", "#", false,
				0, maxFeeLimit, contractExcAddress, contractExcKey, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Optional<TransactionInfo> infoById = null;
		infoById = PublicMethed.getTransactionInfoById(txid, blockingStubFull);
		Long fee = infoById.get().getFee();
		Long netUsed = infoById.get().getReceipt().getNetUsage();
		Long energyUsed = infoById.get().getReceipt().getEnergyUsage();
		Long netFee = infoById.get().getReceipt().getNetFee();

		logger.info("fee:" + fee);
		logger.info("netUsed:" + netUsed);
		logger.info("energyUsed:" + energyUsed);
		logger.info("netFee:" + netFee);

		Account infoafter = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		AccountResourceMessage resourceInfoafter = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		Long afterBalance = infoafter.getBalance();
		Long afterEnergyUsed = resourceInfoafter.getEnergyUsed();
		Long afterNetUsed = resourceInfoafter.getNetUsed();
		Long afterFreeNetUsed = resourceInfoafter.getFreeNetUsed();
		logger.info("afterBalance:" + afterBalance);
		logger.info("afterEnergyUsed:" + afterEnergyUsed);
		logger.info("afterNetUsed:" + afterNetUsed);
		logger.info("afterFreeNetUsed:" + afterFreeNetUsed);

		Assert.assertTrue(infoById.get().getResultValue() == 1);
		Assert.assertTrue(afterBalance + maxFeeLimit + netFee == beforeBalance);
		Assert.assertTrue(beforeEnergyUsed + energyUsed >= afterEnergyUsed);
		Assert.assertTrue(beforeFreeNetUsed + netUsed >= afterFreeNetUsed);
		Assert.assertTrue(beforeNetUsed + netUsed >= afterNetUsed);

	}

	@Test(enabled = true, description = "Trigger contract assert exception")
	public void test7TestAssertContract() {
		String contractName = "TestThrowsContract";
		String code = Configuration.getByPath("testng.conf")
				.getString("code.code_AssertException_testTestAssertContract");
		String abi = Configuration.getByPath("testng.conf")
				.getString("abi.abi_AssertException_testTestAssertContract");
		contractAddress = PublicMethed.deployContract(contractName, abi, code, "", maxFeeLimit,
				0L, 100, null, contractExcKey,
				contractExcAddress, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Account info;
		AccountResourceMessage resourceInfo = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		info = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		Long beforeBalance = info.getBalance();
		Long beforeEnergyUsed = resourceInfo.getEnergyUsed();
		Long beforeNetUsed = resourceInfo.getNetUsed();
		Long beforeFreeNetUsed = resourceInfo.getFreeNetUsed();

		logger.info("beforeBalance:" + beforeBalance);
		logger.info("beforeEnergyUsed:" + beforeEnergyUsed);
		logger.info("beforeNetUsed:" + beforeNetUsed);
		logger.info("beforeFreeNetUsed:" + beforeFreeNetUsed);

		String txid = "";
		txid = PublicMethed.triggerContract(contractAddress,
				"testAssert()", "#", false,
				0, maxFeeLimit, contractExcAddress, contractExcKey, blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Optional<TransactionInfo> infoById;
		infoById = PublicMethed.getTransactionInfoById(txid, blockingStubFull);
		Long fee = infoById.get().getFee();
		Long netUsed = infoById.get().getReceipt().getNetUsage();
		Long energyUsed = infoById.get().getReceipt().getEnergyUsage();
		Long netFee = infoById.get().getReceipt().getNetFee();

		logger.info("fee:" + fee);
		logger.info("netUsed:" + netUsed);
		logger.info("energyUsed:" + energyUsed);
		logger.info("netFee:" + netFee);

		Account infoafter = PublicMethed.queryAccount(contractExcKey, blockingStubFull);
		AccountResourceMessage resourceInfoafter = PublicMethed.getAccountResource(contractExcAddress,
				blockingStubFull);
		PublicMethed.waitProduceNextBlock(blockingStubFull);
		Long afterBalance = infoafter.getBalance();
		Long afterEnergyUsed = resourceInfoafter.getEnergyUsed();
		Long afterNetUsed = resourceInfoafter.getNetUsed();
		Long afterFreeNetUsed = resourceInfoafter.getFreeNetUsed();
		logger.info("afterBalance:" + afterBalance);
		logger.info("afterEnergyUsed:" + afterEnergyUsed);
		logger.info("afterNetUsed:" + afterNetUsed);
		logger.info("afterFreeNetUsed:" + afterFreeNetUsed);
		Assert.assertTrue(infoById.get().getResultValue() == 1);
		Assert.assertTrue((beforeBalance - maxFeeLimit - netFee) == afterBalance);
		Assert.assertTrue(beforeEnergyUsed + energyUsed >= afterEnergyUsed);
		Assert.assertTrue(beforeFreeNetUsed + netUsed >= afterFreeNetUsed);
		Assert.assertTrue(beforeNetUsed + netUsed >= afterNetUsed);
	}

	/**
	 * constructor.
	 */
	@AfterClass
	public void shutdown() throws InterruptedException {
		if (channelFull != null) {
			channelFull.shutdown().awaitTermination(5, TimeUnit.SECONDS);
		}
		if (channelFull1 != null) {
			channelFull1.shutdown().awaitTermination(5, TimeUnit.SECONDS);
		}
		if (channelSolidity != null) {
			channelSolidity.shutdown().awaitTermination(5, TimeUnit.SECONDS);
		}
	}


}
